--- a/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="225.28" y="841.38666666666677"/>
+            <point key="canvasLocation" x="-127" y="1273"/>
         </scene>
         <!--Side Bar Table View Controller-->
         <scene sceneID="jjY-6J-jaD">
@@ -78,6 +78,9 @@
                                             <color key="backgroundColor" red="0.25098039220000001" green="0.25490196079999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="LWs-NK-i1U" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="qhB-Xo-CMP"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="110" id="Xfe-Vu-eZ4">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -99,6 +102,9 @@
                                             <color key="backgroundColor" red="0.25098039220000001" green="0.25490196079999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="DIt-sH-eEi" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="Iqv-Xe-UIp"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="110" id="JeF-Z6-PQe">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -120,6 +126,9 @@
                                             <color key="backgroundColor" red="0.25098039220000001" green="0.25490196079999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="5nu-ly-oHt" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="tnI-Fv-W2X"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="110" id="mxP-7y-P1d">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -141,6 +150,9 @@
                                             <color key="backgroundColor" red="0.25098039220000001" green="0.25490196079999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="ie2-9V-6NH" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="0s3-bR-7Ae"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="110" id="DI4-YU-Nbn">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -162,6 +174,9 @@
                                             <color key="backgroundColor" red="0.25098039220000001" green="0.25490196079999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="2s0-ZN-sUv" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="88P-bG-zIT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -174,7 +189,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tGt-Yr-08L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1333" y="-347"/>
+            <point key="canvasLocation" x="1133" y="605"/>
         </scene>
         <!--Compose View Controller-->
         <scene sceneID="oY9-cA-pxG">
@@ -298,7 +313,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uoW-id-x6N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1266" y="2130"/>
+            <point key="canvasLocation" x="1133" y="2130"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="O7G-At-A7U">
@@ -377,7 +392,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sdg-F6-e4e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2263" y="2130"/>
+            <point key="canvasLocation" x="2171" y="2130"/>
         </scene>
         <!--Sign In Controller-->
         <scene sceneID="86E-pc-28C">
@@ -446,7 +461,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QBC-wN-MwF" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="211" y="-481"/>
+            <point key="canvasLocation" x="-127" y="107"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wfQ-4r-wrD">
